2008-04-17  Bernd Schmidt  <bernd.schmidt@analog.com>

	* cadd16.c: Replaced complex.h with complex_fns.h.
	* cvecdotd.c: Likewise.
	* cmlt16.c: Likewise.
	* cvecvaddf.c: Likewise.
	* norm.c: Likewise.
	* cabsd.c: Likewise.
	* sqrtf.asm: Likewise.
	* cartesian.c: Likewise.
	* polar16.c: Likewise.
	* arg.c: Likewise.
	* cvecssubd.c: Likewise.
	* cvecdotf.c: Likewise.
	* sind.c: Likewise.
	* polar.c: Likewise.
	* cvecdot_fr16.asm: Likewise.
	* cdiv.c: Likewise.
	* sin_fr16.asm: Likewise.
	* lib_sqrt_seeds.asm: Likewise.
	* csubd.c: Likewise.
	* cexpd.c: Likewise.
	* cvecvsubd.c: Likewise.
	* cdivd.c: Likewise.
	* atan2_fr16.asm: Likewise.
	* cabfr16.asm: Likewise.
	* sqrt_fr16.asm: Likewise.
	* div16.asm: Likewise.
	* cartesiand.c: Likewise.
	* cvecssubf.c: Likewise.
	* cvecsmltd.c: Likewise.
	* exp.c: Likewise.
	* testsuite/cfft/cfft.c: Likewise.
	* argd.c: Likewise.
	* normd.c: Likewise.
	* cartesian16.c: Likewise.
	* cmltd.c: Likewise.
	* csub16.c: Likewise.
	* arg16.c: Likewise.
	* cmatmmltd.c: Likewise.
	* cvecvsubf.c: Likewise.
	* cvecvmltd.c: Likewise.
	* cexp.c: Likewise.
	* cvecsaddd.c: Likewise.
	* cos.c: Likewise.
	* cosd.c: Likewise.
	* cvecsmlt.c: Likewise.
	* caddd.c: Likewise.
	* atan2.c: Likewise.
	* cvecvaddd.c: Likewise.
	* conjd.c: Likewise.
	* cabs.c: Likewise.
	* atan2d.c: Likewise.
	* cos_fr16.asm: Likewise.
	* polard.c: Likewise.
	* cvecvmltf.c: Likewise.
	* conj16.c: Likewise.
	* cdiv_fr16.asm: Likewise.
	* cvecsaddf.c: Likewise.
	* sin.c: Likewise.

2008-01-07  Jie Zhang  <jie.zhang@analog.com>

	* u32tof64.asm: Remove useless .end symbol.
	* u64tof64.asm: Likewise.
	* f64toi32z.asm: Likewise.
	* fltuif.asm: Likewise.
	* f64tou64z.asm: Likewise.
	* f64tof32.asm: Likewise.
	* floatdiuf.asm: Likewise.
	* f64toi32.asm: Likewise.
	* fltsif.asm: Likewise.
	* fpdiv.asm: Likewise.
	* f32tof64.asm: Likewise.
	* floatdisf.asm: Likewise.
	* i32tof64.asm: Likewise.
	* i64tof64.asm: Likewise.
	* f64toi64.asm: Likewise.
	* f64toi64z.asm: Likewise.
