@@ -43,7 +43,7 @@
 #endif
 
 #include <filter.h>
-#include <math.h>
+#include <math_bf.h>
 
 #define __USE_FAST_LOOKUP 1
 
